// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render copyright text when not supplied 1`] = `
.c17 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 span {
  font-size: inherit;
  line-height: inherit;
}

.c6 {
  object-fit: cover;
  width: 100%;
  display: block;
  height: auto;
  margin-right: 1rem;
}

.c5 {
  display: inline-block;
  z-index: 3;
  width: 59px;
  transform: inherit;
  vertical-align: bottom;
}

.c33 {
  display: inline-block;
  z-index: 3;
  width: 59px;
  transform: inherit;
  vertical-align: bottom;
}

.c3 {
  position: relative;
  display: inline;
  color: #000000;
  font-weight: normal;
}

.c3 :hover,
.c3 :focus {
  color: #000000;
  text-decoration: none;
}

.c23 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #FFFFFF;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c23 >a {
  text-decoration: none;
}

.c23:hover,
.c23:focus,
.c23:focus-within,
.c23:focus-visible {
  background-color: #E1E2E3;
  outline-offset: 3px;
}

.c23:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c15 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 :after {
  position: absolute;
  top: 0;
  right: 0;
  content: 'Optional';
  font-family: inherit;
  font-size: 1rem;
}

.c18 {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c19 {
  position: relative;
  font-size: 1.25rem;
}

.c20 {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.c21 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c21 :focus {
  border: 1px solid #666;
}

.c29 {
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  transition: opacity 0.2s;
  background-color: #222222;
  border-radius: 0.5rem;
  padding: 0.5rem;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  transform-origin: center;
}

.c29:hover,
.c29:focus {
  opacity: 0.6;
}

.c29:hover,
.c29:focus {
  transform: scale(1.15);
}

.c29:hover,
.c29:focus {
  background-color: #3A3A3A;
  opacity: 1;
}

.c31 {
  width: 100%;
  filter: brightness(0) invert(1);
}

.c27 {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  list-style-type: none;
  justify-content: flex-start;
  margin: 3rem 0;
  padding: 0;
  align-items: center;
}

.c28 {
  width: 54px;
  height: 54px;
  flex: 0 0 54px;
  margin-right: 0;
}

.c30 {
  width: auto;
}

.c25 {
  transform: rotate(180deg);
  fill: #FFFFFF;
}

.c10 {
  margin-bottom: 1.5rem;
  color: #FFFFFF;
}

.c11 {
  margin-bottom: 1rem;
}

.c12 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: bold;
}

.c13 {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
  overflow: visible;
}

.c14 {
  flex: 1;
  display: flex;
  align-items: center;
  width: 100%;
  overflow: visible;
}

.c16 {
  overflow: visible;
}

.c16 input {
  font-size: 1rem;
  line-height: 1.25rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  background-color: #18181A;
  border-color: transparent;
  height: 44px;
  padding: 12px 2.4rem 12px 18px;
  transition: background-color 0.2s ease,text-indent 0.18s ease;
  border: 1px solid #FFFFFF;
  color: #FFFFFF;
}

.c16 input::placeholder {
  color: #E1E2E3;
}

.c16 input:hover,
.c16 input:focus {
  background-color: #3A3A3A;
}

.c22 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.c24 {
  margin: 0;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  height: 44px;
  padding: 0 1rem;
  border-radius: 0.5rem;
  overflow: hidden;
  min-width: max-content;
  width: 100%;
}

.c24 .emailSignUpButtonContent {
  display: inline-grid;
  grid-auto-flow: column;
  grid-template-columns: auto 18px;
  column-gap: 0.5rem;
  align-items: center;
  justify-content: center;
  line-height: 1;
  white-space: nowrap;
}

.c24 .emailSignUpButtonLabel {
  display: inline-block;
  font-size: 16px;
  line-height: 1;
  transform: translateX(13px);
  transition: transform 0.22s ease;
  will-change: transform;
  white-space: nowrap;
}

.c24 .emailSignUpButtonArrow {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 18px;
  height: 18px;
  opacity: 0;
  transform: translateX(-13px);
  transition: opacity 0.22s ease,transform 0.22s ease;
  will-change: transform,opacity;
}

.c24 .emailSignUpButtonArrow svg {
  fill: currentColor!important;
}

.c24:hover,
.c24:focus {
  background-color: #E1E2E3;
  color: #000000;
}

.c24:hover .emailSignUpButtonLabel,
.c24:focus .emailSignUpButtonLabel {
  transform: translateX(0);
}

.c24:hover .emailSignUpButtonArrow,
.c24:focus .emailSignUpButtonArrow {
  opacity: 1;
  transform: translateX(0);
}

.c0 {
  text-align: left;
  background: #18181A;
  padding-top: 4.5rem;
}

.c1 {
  position: relative;
  display: block;
  width: 100%;
  height: 100%;
  max-width: 1424px;
  margin: 0 auto;
  padding: 0 1rem;
}

.c7 {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  gap: 1rem;
}

.c8 {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.c9 {
  max-width: 100%;
}

.c26 {
  margin-bottom: 1rem;
  box-sizing: content-box;
  gap: 1rem;
  display: none;
}

.c39 {
  margin-bottom: 1rem;
  box-sizing: content-box;
  gap: 1rem;
  display: block;
}

.c35 {
  display: flex;
  flex-direction: column;
  list-style: none;
  padding: 1rem 0;
  margin: 0 0 1rem 0;
  gap: 2rem;
}

.c36 {
  margin: 0;
}

.c37 {
  color: #FFFFFF;
  text-decoration: none;
  font-weight: bold;
  font-size: 16px;
}

.c37:hover,
.c37:focus {
  text-decoration: underline;
  text-decoration-color: #FFFFFF;
}

.c38 {
  color: #FFFFFF;
  font-weight: bold;
  font-size: 16px;
}

.c40 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0 0 1rem 0;
  gap: 0.5rem;
  align-items: center;
}

.c41 {
  margin: 0;
  display: flex;
  align-items: center;
}

.c41:not(:last-child)::after {
  content: '|';
  margin-left: 0.5rem;
  color: #FFFFFF;
  opacity: 0.8;
}

.c42 {
  text-decoration: none;
}

.c42 >span {
  color: #FFFFFF;
  opacity: 0.8;
  text-decoration: none;
  text-decoration-color: #FFFFFF;
  font-weight: normal;
  font-size: 0.875rem;
}

.c42:hover,
.c42:focus {
  text-decoration: underline;
  text-decoration-color: #FFFFFF;
}

.c43 {
  color: #FFFFFF;
  opacity: 0.8;
  font-weight: normal;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: flex-start;
  padding-bottom: 2rem;
}

.c32 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: center;
  padding-bottom: 0;
  display: none;
}

.c34 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: center;
  padding-bottom: 0;
  display: none;
}

.c46 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: flex-start;
  padding-bottom: 2rem;
}

.c4 {
  color: transparent;
  border: 0;
}

.c4 :hover {
  border: 0;
}

.c4 img {
  transition: transform 0.6s cubic-bezier(0.41,1.64,0.41,0.8);
}

.c4:hover img,
.c4:focus img {
  transform: rotate(-14deg);
}

.c44 {
  display: block;
  width: 100%;
  height: 100%;
  text-align: left;
  margin-bottom: 2rem;
}

.c45 {
  color: #FFFFFF;
  opacity: 0.8;
  font-size: 0.875rem;
  margin-bottom: 0.5rem;
}

@media (min-width: 740px) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c17 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 1150px) {
  .c5 {
    width: 72px;
  }
}

@media (min-width: 1150px) {
  .c33 {
    width: 59px;
  }
}

@media (min-width: 740px) {
  .c23 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c23 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c23 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c23 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c27 {
    justify-content: start;
    margin: 0.5rem 0;
  }
}

@media (min-width: 740px) {
  .c28 {
    margin-right: 0;
  }
}

@media (min-width: 1024px) {
  .c25 {
    fill: #FFFFFF;
  }
}

@media (min-width: 740px) {
  .c10 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 740px) {
  .c12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c12 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c13 {
    flex-direction: row;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c14 {
    width: 100%;
    max-width: 364px;
  }
}

@media (min-width: 740px) {
  .c16 input,
  .c16 textarea {
    text-indent: 0;
    transition: text-indent 0.18s ease;
  }

  .c16:hover input,
  .c16:hover textarea,
  .c16:focus-within input,
  .c16:focus-within textarea {
    text-indent: 4px;
  }
}

@media (min-width: 740px) {
  .c22 {
    width: 100%;
    max-width: 123px;
    flex: 0 0 auto;
  }
}

@media (min-width: 740px) {
  .c24 {
    margin: 0;
    max-width: 123px;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding-bottom: 3rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    padding-top: 5.5rem;
    padding-bottom: 5rem;
  }
}

@media (min-width: 740px) {
  .c1 {
    padding: 0 2rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    padding: 0 4rem;
  }
}

@media (min-width: 740px) {
  .c7 {
    flex-direction: row;
    justify-content: space-between;
    column-gap: 3rem;
    align-items: flex-start;
  }
}

@media (min-width: 740px) {
  .c8 {
    flex-direction: column;
    flex: 1 1 auto;
    min-width: 0;
  }
}

@media (min-width: 740px) {
  .c9 {
    max-width: 100%;
  }
}

@media (min-width: 740px) {
  .c26 {
    box-sizing: border-box;
    display: flex;
    margin-bottom: 0;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c39 {
    box-sizing: border-box;
    display: none;
    margin-bottom: 1rem;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c35 {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 1.5rem;
  }
}

@media (min-width: 740px) {
  .c41 {
    display: inline;
  }
}

@media (min-width: 740px) {
  .c2 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    display: none;
    justify-content: center;
  }
}

@media (min-width: 740px) {
  .c32 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 2rem;
    display: flex;
    justify-content: flex-end;
  }
}

@media (min-width: 740px) {
  .c34 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 2rem;
    display: none;
    justify-content: flex-end;
  }
}

@media (min-width: 740px) {
  .c46 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    display: flex;
    justify-content: flex-start;
  }
}

@media (min-width: 1024px) {
  .c44 {
    margin-bottom: 0;
  }
}

<div>
  <footer
    className="c0"
    role="banner"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <a
          animateRotate={true}
          buttonType="primary"
          className="c3 c4"
          color="red"
          fullWidth={false}
          home={false}
          href="/"
          iconFirst={false}
          mobileColour={null}
          target="_self"
          title="Go to Comic Relief homepage"
          type="standard"
          underline={true}
        >
          <div
            className="c5"
            rotate={0}
            sizeMd="72px"
            sizeSm="59px"
          >
            <img
              alt="Comic Relief logo"
              className="c6"
              src="mock.asset"
            />
          </div>
        </a>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <form
              noValidate={true}
              onSubmit={[Function]}
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                >
                  <span
                    className="c12"
                  >
                    Subscribe to our newsletter
                  </span>
                </div>
                <div
                  className="c13"
                  error={false}
                >
                  <div
                    className="c14"
                  >
                    <label
                      className="c15 c16"
                      errorMsg=""
                      htmlFor="email-signup"
                      optional={true}
                    >
                      <span
                        className="c17 c18"
                        dangerouslySetInnerHTML={
                          {
                            "__html": "Email address",
                          }
                        }
                      />
                      <div
                        className="c19"
                        error={false}
                      >
                        <div
                          className="c20"
                          error={false}
                        >
                          <input
                            aria-required={false}
                            className="c21"
                            error={false}
                            id="email-signup"
                            name="email"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="Enter your email address"
                            prefixLength={0}
                            required={false}
                            type="email"
                          />
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    className="c22"
                  >
                    <button
                      buttonType="primary"
                      className="c23 c24"
                      color="white"
                      fullWidth={false}
                      type="submit"
                    >
                      <span
                        className="emailSignUpButtonContent"
                      >
                        <span
                          className="emailSignUpButtonLabel"
                        >
                          Sign up
                        </span>
                        <span
                          aria-hidden="true"
                          className="emailSignUpButtonArrow"
                        >
                          <svg
                            className="c25"
                            colour="white"
                            direction="right"
                            height={18}
                            mobileColour={null}
                            viewBox="0 0 96 96"
                            width={18}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m90.871,50.776c-0.016,0.016 -0.026,0.036 -0.043,0.052l-32,32c-0.781,0.781 -1.804,1.172 -2.828,1.172s-2.047,-0.391 -2.829,-1.171a4,4 0 0 1 0,-5.657l25.172,-25.172l-70.343,0a4,4 0 0 1 0,-8l70.343,0l-25.172,-25.171a4,4 0 0 1 5.657,-5.657l32,32c0.016,0.016 0.027,0.036 0.043,0.052c0.167,0.172 0.321,0.357 0.455,0.557c0.069,0.104 0.118,0.216 0.176,0.325c0.065,0.121 0.138,0.236 0.191,0.364c0.057,0.137 0.09,0.279 0.13,0.42c0.032,0.109 0.074,0.214 0.097,0.327a4.017,4.017 0 0 1 0,1.568c-0.023,0.113 -0.065,0.217 -0.097,0.327c-0.041,0.141 -0.074,0.283 -0.13,0.42c-0.053,0.128 -0.126,0.243 -0.191,0.364c-0.059,0.109 -0.107,0.221 -0.176,0.325a4.035,4.035 0 0 1 -0.455,0.555z"
                              id="svg_1"
                              transform="rotate(-180 47.998626708984375,48.00019836425781) "
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="c26"
          >
            <ul
              className="c27"
              newStyle={true}
            >
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-facebook"
                  href="https://www.facebook.com/comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our Facebook page"
                >
                  <img
                    alt="facebook"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-instagram"
                  href="https://www.instagram.com/comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our Instagram account"
                >
                  <img
                    alt="instagram"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-x"
                  href="https://x.com/comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our X account"
                >
                  <img
                    alt="x"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-tiktok"
                  href="https://www.tiktok.com/@comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our TikTok account"
                >
                  <img
                    alt="tiktok"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-youtube"
                  href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our YouTube channel"
                >
                  <img
                    alt="youtube"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="c32"
        >
          <a
            animateRotate={true}
            buttonType="primary"
            className="c3 c4"
            color="red"
            fullWidth={false}
            home={false}
            href="/"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            title="Go to Comic Relief homepage"
            type="standard"
            underline={true}
          >
            <div
              className="c33"
              rotate={0}
              sizeMd="59px"
              sizeSm="59px"
            >
              <img
                alt="Comic Relief logo"
                className="c6"
                src="mock.asset"
              />
            </div>
          </a>
        </div>
        <div
          className="c34"
        >
          <a
            animateRotate={true}
            buttonType="primary"
            className="c3 c4"
            color="red"
            fullWidth={false}
            home={false}
            href="/"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            title="Go to Comic Relief homepage"
            type="standard"
            underline={true}
          >
            <div
              className="c33"
              rotate={0}
              sizeMd="59px"
              sizeSm="59px"
            >
              <img
                alt="Comic Relief logo"
                className="c6"
                src="mock.asset"
              />
            </div>
          </a>
        </div>
      </div>
      <nav
        aria-label="Primary footer navigation"
        className="c35"
        role="navigation"
      >
        <li
          className="c36"
        >
          <a
            buttonType="primary"
            className="c3 c37"
            color="red"
            fullWidth={false}
            home={false}
            href="/contact-us"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c38"
            >
              Contact us
            </span>
          </a>
        </li>
        <li
          className="c36"
        >
          <a
            buttonType="primary"
            className="c3 c37"
            color="red"
            fullWidth={false}
            home={false}
            href="https://www.comicrelief.com/frequently-asked-questions"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c38"
            >
              FAQs
            </span>
          </a>
        </li>
      </nav>
      <div
        className="c39"
      >
        <ul
          className="c27"
          newStyle={true}
        >
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-facebook"
              href="https://www.facebook.com/comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our Facebook page"
            >
              <img
                alt="facebook"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-instagram"
              href="https://www.instagram.com/comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our Instagram account"
            >
              <img
                alt="instagram"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-x"
              href="https://x.com/comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our X account"
            >
              <img
                alt="x"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-tiktok"
              href="https://www.tiktok.com/@comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our TikTok account"
            >
              <img
                alt="tiktok"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-youtube"
              href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our YouTube channel"
            >
              <img
                alt="youtube"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
        </ul>
      </div>
      <nav
        aria-label="Secondary footer navigation"
        className="c40"
        role="navigation"
      >
        <li
          className="c41"
        >
          <a
            buttonType="primary"
            className="c3 c42"
            color="red"
            fullWidth={false}
            home={false}
            href="https://www.comicrelief.com/terms-of-use"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c43"
            >
              Terms of use
            </span>
          </a>
        </li>
        <li
          className="c41"
        >
          <a
            buttonType="primary"
            className="c3 c42"
            color="red"
            fullWidth={false}
            home={false}
            href="https://www.comicrelief.com/privacy-notice"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c43"
            >
              Privacy notice
            </span>
          </a>
        </li>
      </nav>
      <div
        className="c44"
      >
        <p
          className="c17 c45"
        >
          Comic Relief is the trading name of Charity Projects, a registered charity in England and Wales (326568) and Scotland (SC039730), which is a company limited by guarantee registered in England and Wales (01806414). Registered address: 6th Floor, The White Chapel Building, 10 Whitechapel High Street, London, E1 8QS.
        </p>
      </div>
      <div
        className="c46"
      />
    </div>
  </footer>
</div>
`;

exports[`renders correctly 1`] = `
.c17 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 span {
  font-size: inherit;
  line-height: inherit;
}

.c6 {
  object-fit: cover;
  width: 100%;
  display: block;
  height: auto;
  margin-right: 1rem;
}

.c5 {
  display: inline-block;
  z-index: 3;
  width: 59px;
  transform: inherit;
  vertical-align: bottom;
}

.c33 {
  display: inline-block;
  z-index: 3;
  width: 59px;
  transform: inherit;
  vertical-align: bottom;
}

.c3 {
  position: relative;
  display: inline;
  color: #000000;
  font-weight: normal;
}

.c3 :hover,
.c3 :focus {
  color: #000000;
  text-decoration: none;
}

.c23 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #FFFFFF;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c23 >a {
  text-decoration: none;
}

.c23:hover,
.c23:focus,
.c23:focus-within,
.c23:focus-visible {
  background-color: #E1E2E3;
  outline-offset: 3px;
}

.c23:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c15 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 :after {
  position: absolute;
  top: 0;
  right: 0;
  content: 'Optional';
  font-family: inherit;
  font-size: 1rem;
}

.c18 {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c19 {
  position: relative;
  font-size: 1.25rem;
}

.c20 {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.c21 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c21 :focus {
  border: 1px solid #666;
}

.c29 {
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  transition: opacity 0.2s;
  background-color: #222222;
  border-radius: 0.5rem;
  padding: 0.5rem;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  transform-origin: center;
}

.c29:hover,
.c29:focus {
  opacity: 0.6;
}

.c29:hover,
.c29:focus {
  transform: scale(1.15);
}

.c29:hover,
.c29:focus {
  background-color: #3A3A3A;
  opacity: 1;
}

.c31 {
  width: 100%;
  filter: brightness(0) invert(1);
}

.c27 {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  list-style-type: none;
  justify-content: flex-start;
  margin: 3rem 0;
  padding: 0;
  align-items: center;
}

.c28 {
  width: 54px;
  height: 54px;
  flex: 0 0 54px;
  margin-right: 0;
}

.c30 {
  width: auto;
}

.c25 {
  transform: rotate(180deg);
  fill: #FFFFFF;
}

.c10 {
  margin-bottom: 1.5rem;
  color: #FFFFFF;
}

.c11 {
  margin-bottom: 1rem;
}

.c12 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: bold;
}

.c13 {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
  overflow: visible;
}

.c14 {
  flex: 1;
  display: flex;
  align-items: center;
  width: 100%;
  overflow: visible;
}

.c16 {
  overflow: visible;
}

.c16 input {
  font-size: 1rem;
  line-height: 1.25rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  background-color: #18181A;
  border-color: transparent;
  height: 44px;
  padding: 12px 2.4rem 12px 18px;
  transition: background-color 0.2s ease,text-indent 0.18s ease;
  border: 1px solid #FFFFFF;
  color: #FFFFFF;
}

.c16 input::placeholder {
  color: #E1E2E3;
}

.c16 input:hover,
.c16 input:focus {
  background-color: #3A3A3A;
}

.c22 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.c24 {
  margin: 0;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  height: 44px;
  padding: 0 1rem;
  border-radius: 0.5rem;
  overflow: hidden;
  min-width: max-content;
  width: 100%;
}

.c24 .emailSignUpButtonContent {
  display: inline-grid;
  grid-auto-flow: column;
  grid-template-columns: auto 18px;
  column-gap: 0.5rem;
  align-items: center;
  justify-content: center;
  line-height: 1;
  white-space: nowrap;
}

.c24 .emailSignUpButtonLabel {
  display: inline-block;
  font-size: 16px;
  line-height: 1;
  transform: translateX(13px);
  transition: transform 0.22s ease;
  will-change: transform;
  white-space: nowrap;
}

.c24 .emailSignUpButtonArrow {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 18px;
  height: 18px;
  opacity: 0;
  transform: translateX(-13px);
  transition: opacity 0.22s ease,transform 0.22s ease;
  will-change: transform,opacity;
}

.c24 .emailSignUpButtonArrow svg {
  fill: currentColor!important;
}

.c24:hover,
.c24:focus {
  background-color: #E1E2E3;
  color: #000000;
}

.c24:hover .emailSignUpButtonLabel,
.c24:focus .emailSignUpButtonLabel {
  transform: translateX(0);
}

.c24:hover .emailSignUpButtonArrow,
.c24:focus .emailSignUpButtonArrow {
  opacity: 1;
  transform: translateX(0);
}

.c0 {
  text-align: left;
  background: #18181A;
  padding-top: 4.5rem;
}

.c1 {
  position: relative;
  display: block;
  width: 100%;
  height: 100%;
  max-width: 1424px;
  margin: 0 auto;
  padding: 0 1rem;
}

.c7 {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  gap: 1rem;
}

.c8 {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.c9 {
  max-width: 100%;
}

.c26 {
  margin-bottom: 1rem;
  box-sizing: content-box;
  gap: 1rem;
  display: none;
}

.c39 {
  margin-bottom: 1rem;
  box-sizing: content-box;
  gap: 1rem;
  display: block;
}

.c35 {
  display: flex;
  flex-direction: column;
  list-style: none;
  padding: 1rem 0;
  margin: 0 0 1rem 0;
  gap: 2rem;
}

.c36 {
  margin: 0;
}

.c37 {
  color: #FFFFFF;
  text-decoration: none;
  font-weight: bold;
  font-size: 16px;
}

.c37:hover,
.c37:focus {
  text-decoration: underline;
  text-decoration-color: #FFFFFF;
}

.c38 {
  color: #FFFFFF;
  font-weight: bold;
  font-size: 16px;
}

.c40 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0 0 1rem 0;
  gap: 0.5rem;
  align-items: center;
}

.c41 {
  margin: 0;
  display: flex;
  align-items: center;
}

.c41:not(:last-child)::after {
  content: '|';
  margin-left: 0.5rem;
  color: #FFFFFF;
  opacity: 0.8;
}

.c42 {
  text-decoration: none;
}

.c42 >span {
  color: #FFFFFF;
  opacity: 0.8;
  text-decoration: none;
  text-decoration-color: #FFFFFF;
  font-weight: normal;
  font-size: 0.875rem;
}

.c42:hover,
.c42:focus {
  text-decoration: underline;
  text-decoration-color: #FFFFFF;
}

.c43 {
  color: #FFFFFF;
  opacity: 0.8;
  font-weight: normal;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: flex-start;
  padding-bottom: 2rem;
}

.c32 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: center;
  padding-bottom: 0;
  display: none;
}

.c34 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: center;
  padding-bottom: 0;
  display: none;
}

.c46 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2rem;
  justify-content: flex-start;
  padding-bottom: 2rem;
}

.c4 {
  color: transparent;
  border: 0;
}

.c4 :hover {
  border: 0;
}

.c4 img {
  transition: transform 0.6s cubic-bezier(0.41,1.64,0.41,0.8);
}

.c4:hover img,
.c4:focus img {
  transform: rotate(-14deg);
}

.c44 {
  display: block;
  width: 100%;
  height: 100%;
  text-align: left;
  margin-bottom: 2rem;
}

.c45 {
  color: #FFFFFF;
  opacity: 0.8;
  font-size: 0.875rem;
  margin-bottom: 0.5rem;
}

@media (min-width: 740px) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c17 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 1150px) {
  .c5 {
    width: 72px;
  }
}

@media (min-width: 1150px) {
  .c33 {
    width: 59px;
  }
}

@media (min-width: 740px) {
  .c23 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c23 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c23 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c23 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c27 {
    justify-content: start;
    margin: 0.5rem 0;
  }
}

@media (min-width: 740px) {
  .c28 {
    margin-right: 0;
  }
}

@media (min-width: 1024px) {
  .c25 {
    fill: #FFFFFF;
  }
}

@media (min-width: 740px) {
  .c10 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 740px) {
  .c12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c12 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c13 {
    flex-direction: row;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c14 {
    width: 100%;
    max-width: 364px;
  }
}

@media (min-width: 740px) {
  .c16 input,
  .c16 textarea {
    text-indent: 0;
    transition: text-indent 0.18s ease;
  }

  .c16:hover input,
  .c16:hover textarea,
  .c16:focus-within input,
  .c16:focus-within textarea {
    text-indent: 4px;
  }
}

@media (min-width: 740px) {
  .c22 {
    width: 100%;
    max-width: 123px;
    flex: 0 0 auto;
  }
}

@media (min-width: 740px) {
  .c24 {
    margin: 0;
    max-width: 123px;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding-bottom: 3rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    padding-top: 5.5rem;
    padding-bottom: 5rem;
  }
}

@media (min-width: 740px) {
  .c1 {
    padding: 0 2rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    padding: 0 4rem;
  }
}

@media (min-width: 740px) {
  .c7 {
    flex-direction: row;
    justify-content: space-between;
    column-gap: 3rem;
    align-items: flex-start;
  }
}

@media (min-width: 740px) {
  .c8 {
    flex-direction: column;
    flex: 1 1 auto;
    min-width: 0;
  }
}

@media (min-width: 740px) {
  .c9 {
    max-width: 100%;
  }
}

@media (min-width: 740px) {
  .c26 {
    box-sizing: border-box;
    display: flex;
    margin-bottom: 0;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c39 {
    box-sizing: border-box;
    display: none;
    margin-bottom: 1rem;
    align-items: center;
  }
}

@media (min-width: 740px) {
  .c35 {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 1.5rem;
  }
}

@media (min-width: 740px) {
  .c41 {
    display: inline;
  }
}

@media (min-width: 740px) {
  .c2 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    display: none;
    justify-content: center;
  }
}

@media (min-width: 740px) {
  .c32 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 2rem;
    display: flex;
    justify-content: flex-end;
  }
}

@media (min-width: 740px) {
  .c34 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 2rem;
    display: none;
    justify-content: flex-end;
  }
}

@media (min-width: 740px) {
  .c46 {
    flex: 0 0 auto;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    display: flex;
    justify-content: flex-start;
  }
}

@media (min-width: 1024px) {
  .c44 {
    margin-bottom: 0;
  }
}

<div>
  <footer
    className="c0"
    role="banner"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <a
          animateRotate={true}
          buttonType="primary"
          className="c3 c4"
          color="red"
          fullWidth={false}
          home={false}
          href="/"
          iconFirst={false}
          mobileColour={null}
          target="_self"
          title="Go to Comic Relief homepage"
          type="standard"
          underline={true}
        >
          <div
            className="c5"
            rotate={0}
            sizeMd="72px"
            sizeSm="59px"
          >
            <img
              alt="Comic Relief logo"
              className="c6"
              src="mock.asset"
            />
          </div>
        </a>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <form
              noValidate={true}
              onSubmit={[Function]}
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                >
                  <span
                    className="c12"
                  >
                    Subscribe to our newsletter
                  </span>
                </div>
                <div
                  className="c13"
                  error={false}
                >
                  <div
                    className="c14"
                  >
                    <label
                      className="c15 c16"
                      errorMsg=""
                      htmlFor="email-signup"
                      optional={true}
                    >
                      <span
                        className="c17 c18"
                        dangerouslySetInnerHTML={
                          {
                            "__html": "Email address",
                          }
                        }
                      />
                      <div
                        className="c19"
                        error={false}
                      >
                        <div
                          className="c20"
                          error={false}
                        >
                          <input
                            aria-required={false}
                            className="c21"
                            error={false}
                            id="email-signup"
                            name="email"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="Enter your email address"
                            prefixLength={0}
                            required={false}
                            type="email"
                          />
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    className="c22"
                  >
                    <button
                      buttonType="primary"
                      className="c23 c24"
                      color="white"
                      fullWidth={false}
                      type="submit"
                    >
                      <span
                        className="emailSignUpButtonContent"
                      >
                        <span
                          className="emailSignUpButtonLabel"
                        >
                          Sign up
                        </span>
                        <span
                          aria-hidden="true"
                          className="emailSignUpButtonArrow"
                        >
                          <svg
                            className="c25"
                            colour="white"
                            direction="right"
                            height={18}
                            mobileColour={null}
                            viewBox="0 0 96 96"
                            width={18}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m90.871,50.776c-0.016,0.016 -0.026,0.036 -0.043,0.052l-32,32c-0.781,0.781 -1.804,1.172 -2.828,1.172s-2.047,-0.391 -2.829,-1.171a4,4 0 0 1 0,-5.657l25.172,-25.172l-70.343,0a4,4 0 0 1 0,-8l70.343,0l-25.172,-25.171a4,4 0 0 1 5.657,-5.657l32,32c0.016,0.016 0.027,0.036 0.043,0.052c0.167,0.172 0.321,0.357 0.455,0.557c0.069,0.104 0.118,0.216 0.176,0.325c0.065,0.121 0.138,0.236 0.191,0.364c0.057,0.137 0.09,0.279 0.13,0.42c0.032,0.109 0.074,0.214 0.097,0.327a4.017,4.017 0 0 1 0,1.568c-0.023,0.113 -0.065,0.217 -0.097,0.327c-0.041,0.141 -0.074,0.283 -0.13,0.42c-0.053,0.128 -0.126,0.243 -0.191,0.364c-0.059,0.109 -0.107,0.221 -0.176,0.325a4.035,4.035 0 0 1 -0.455,0.555z"
                              id="svg_1"
                              transform="rotate(-180 47.998626708984375,48.00019836425781) "
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            className="c26"
          >
            <ul
              className="c27"
              newStyle={true}
            >
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-facebook"
                  href="https://www.facebook.com/comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our Facebook page"
                >
                  <img
                    alt="facebook"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-instagram"
                  href="https://www.instagram.com/comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our Instagram account"
                >
                  <img
                    alt="instagram"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-x"
                  href="https://x.com/comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our X account"
                >
                  <img
                    alt="x"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-tiktok"
                  href="https://www.tiktok.com/@comicrelief"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our TikTok account"
                >
                  <img
                    alt="tiktok"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
              <li
                className="c28"
                newStyle={true}
              >
                <a
                  className="c29 c30"
                  data-test="icon-youtube"
                  href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
                  isHeader={false}
                  newStyle={true}
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Check out our YouTube channel"
                >
                  <img
                    alt="youtube"
                    className="c31"
                    invertColor={true}
                    src="mock.asset"
                  />
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="c32"
        >
          <a
            animateRotate={true}
            buttonType="primary"
            className="c3 c4"
            color="red"
            fullWidth={false}
            home={false}
            href="/"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            title="Go to Comic Relief homepage"
            type="standard"
            underline={true}
          >
            <div
              className="c33"
              rotate={0}
              sizeMd="59px"
              sizeSm="59px"
            >
              <img
                alt="Comic Relief logo"
                className="c6"
                src="mock.asset"
              />
            </div>
          </a>
        </div>
        <div
          className="c34"
        >
          <a
            animateRotate={true}
            buttonType="primary"
            className="c3 c4"
            color="red"
            fullWidth={false}
            home={false}
            href="/"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            title="Go to Comic Relief homepage"
            type="standard"
            underline={true}
          >
            <div
              className="c33"
              rotate={0}
              sizeMd="59px"
              sizeSm="59px"
            >
              <img
                alt="Comic Relief logo"
                className="c6"
                src="mock.asset"
              />
            </div>
          </a>
        </div>
      </div>
      <nav
        aria-label="Primary footer navigation"
        className="c35"
        role="navigation"
      >
        <li
          className="c36"
        >
          <a
            buttonType="primary"
            className="c3 c37"
            color="red"
            fullWidth={false}
            home={false}
            href="/contact-us"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c38"
            >
              Contact us
            </span>
          </a>
        </li>
        <li
          className="c36"
        >
          <a
            buttonType="primary"
            className="c3 c37"
            color="red"
            fullWidth={false}
            home={false}
            href="https://www.comicrelief.com/frequently-asked-questions"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c38"
            >
              FAQs
            </span>
          </a>
        </li>
      </nav>
      <div
        className="c39"
      >
        <ul
          className="c27"
          newStyle={true}
        >
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-facebook"
              href="https://www.facebook.com/comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our Facebook page"
            >
              <img
                alt="facebook"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-instagram"
              href="https://www.instagram.com/comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our Instagram account"
            >
              <img
                alt="instagram"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-x"
              href="https://x.com/comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our X account"
            >
              <img
                alt="x"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-tiktok"
              href="https://www.tiktok.com/@comicrelief"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our TikTok account"
            >
              <img
                alt="tiktok"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
          <li
            className="c28"
            newStyle={true}
          >
            <a
              className="c29 c30"
              data-test="icon-youtube"
              href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
              isHeader={false}
              newStyle={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Check out our YouTube channel"
            >
              <img
                alt="youtube"
                className="c31"
                invertColor={true}
                src="mock.asset"
              />
            </a>
          </li>
        </ul>
      </div>
      <nav
        aria-label="Secondary footer navigation"
        className="c40"
        role="navigation"
      >
        <li
          className="c41"
        >
          <a
            buttonType="primary"
            className="c3 c42"
            color="red"
            fullWidth={false}
            home={false}
            href="https://www.comicrelief.com/terms-of-use"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c43"
            >
              Terms of use
            </span>
          </a>
        </li>
        <li
          className="c41"
        >
          <a
            buttonType="primary"
            className="c3 c42"
            color="red"
            fullWidth={false}
            home={false}
            href="https://www.comicrelief.com/privacy-notice"
            iconFirst={false}
            mobileColour={null}
            target="_self"
            type="standard"
            underline={true}
          >
            <span
              className="c17 c43"
            >
              Privacy notice
            </span>
          </a>
        </li>
      </nav>
      <div
        className="c44"
      >
        <p
          className="c17 c45"
        >
          © 2026 Comic Relief
        </p>
        <p
          className="c17 c45"
        >
          Comic Relief is the trading name of Charity Projects, a registered charity in England and Wales (326568) and Scotland (SC039730), which is a company limited by guarantee registered in England and Wales (01806414). Registered address: 6th Floor, The White Chapel Building, 10 Whitechapel High Street, London, E1 8QS.
        </p>
      </div>
      <div
        className="c46"
      />
    </div>
  </footer>
</div>
`;
